Evaluate Test Data Set on Network

--- a/simple_NeuralNetwork.ipynb
+++ b/simple_NeuralNetwork.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOv3vTXbNsPGWStnW1RXoKk",
+      "authorship_tag": "ABX9TyNKGL0ung22VORdfpWf3Y2k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {
         "id": "b8207GmqD9x7"
       },
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "U6TqYbEhF1qz"
       },
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "BKMJx-KgIKiU"
       },
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "HnE6H0uQIsVo"
       },
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "lgJJFgVrJrS-"
       },
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -118,9 +118,9 @@
           "height": 423
         },
         "id": "WNzYWaL0KTGj",
-        "outputId": "9a6df8ca-bba3-4cf6-890f-e51288b622b7"
+        "outputId": "8b2a45a5-7d5f-4b93-c769-a7af2d42ba8c"
       },
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +143,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c5fbe582-e69a-4549-b16b-bdfefcafeb97\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b232b523-1ab6-4f2d-b6c1-636ef25c33f0\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -265,7 +265,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c5fbe582-e69a-4549-b16b-bdfefcafeb97')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b232b523-1ab6-4f2d-b6c1-636ef25c33f0')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -317,12 +317,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c5fbe582-e69a-4549-b16b-bdfefcafeb97 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b232b523-1ab6-4f2d-b6c1-636ef25c33f0 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c5fbe582-e69a-4549-b16b-bdfefcafeb97');\n",
+              "        const element = document.querySelector('#df-b232b523-1ab6-4f2d-b6c1-636ef25c33f0');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -342,8 +342,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-6f241525-069a-4341-beb8-f6eb73b6562f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6f241525-069a-4341-beb8-f6eb73b6562f')\"\n",
+              "    <div id=\"df-950c3b25-3b07-4a95-aa18-b18f7c35cd5d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-950c3b25-3b07-4a95-aa18-b18f7c35cd5d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -462,14 +462,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-6f241525-069a-4341-beb8-f6eb73b6562f button');\n",
+              "            document.querySelector('#df-950c3b25-3b07-4a95-aa18-b18f7c35cd5d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_e98a9f16-31ff-42e2-bc7c-1609a551d3dd\">\n",
+              "  <div id=\"id_e6551faa-dbe0-42bf-bc09-5c8dfcc53a39\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -513,7 +513,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_e98a9f16-31ff-42e2-bc7c-1609a551d3dd button.colab-df-generate');\n",
+              "        document.querySelector('#id_e6551faa-dbe0-42bf-bc09-5c8dfcc53a39 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -534,7 +534,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 7
         }
       ]
     },
@@ -551,15 +551,15 @@
           "height": 478
         },
         "id": "kCFladqRKZQC",
-        "outputId": "d6a493eb-63fa-434c-d808-874b9ba8709d"
+        "outputId": "60e656de-f91f-429f-cfe1-a8ac1866e8f5"
       },
-      "execution_count": 25,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-25-a83c38a04bdd>:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+            "<ipython-input-8-a83c38a04bdd>:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
             "  my_df['variety'] = my_df['variety'].replace({'Setosa':0.0, 'Versicolor':1.0, 'Virginica':2.0})\n"
           ]
         },
@@ -584,7 +584,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-33161748-9780-4e6e-a86b-cab7296723fb\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d3b20355-f538-4266-8d04-bafc78055af7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -706,7 +706,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-33161748-9780-4e6e-a86b-cab7296723fb')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d3b20355-f538-4266-8d04-bafc78055af7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -758,12 +758,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-33161748-9780-4e6e-a86b-cab7296723fb button.colab-df-convert');\n",
+              "        document.querySelector('#df-d3b20355-f538-4266-8d04-bafc78055af7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-33161748-9780-4e6e-a86b-cab7296723fb');\n",
+              "        const element = document.querySelector('#df-d3b20355-f538-4266-8d04-bafc78055af7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -783,8 +783,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-ef0e9138-876f-4c6e-8d5b-73aa9b33e014\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ef0e9138-876f-4c6e-8d5b-73aa9b33e014')\"\n",
+              "    <div id=\"df-e6fa6601-4629-49b4-80fc-bda04fb71842\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e6fa6601-4629-49b4-80fc-bda04fb71842')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -903,14 +903,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-ef0e9138-876f-4c6e-8d5b-73aa9b33e014 button');\n",
+              "            document.querySelector('#df-e6fa6601-4629-49b4-80fc-bda04fb71842 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_bdca9d13-8a58-4ec2-82b2-bdc9a7952db5\">\n",
+              "  <div id=\"id_ff660f17-dffc-4b5b-aedc-5721b4918d4b\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -954,7 +954,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_bdca9d13-8a58-4ec2-82b2-bdc9a7952db5 button.colab-df-generate');\n",
+              "        document.querySelector('#id_ff660f17-dffc-4b5b-aedc-5721b4918d4b button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -975,7 +975,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 8
         }
       ]
     },
@@ -989,7 +989,7 @@
       "metadata": {
         "id": "dd6eKcKuK7KJ"
       },
-      "execution_count": 26,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1002,7 +1002,7 @@
       "metadata": {
         "id": "zLviRPPELphy"
       },
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1013,7 +1013,7 @@
       "metadata": {
         "id": "HjrBlKBALubd"
       },
-      "execution_count": 28,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1025,7 +1025,7 @@
       "metadata": {
         "id": "XjvyCFRbL8XT"
       },
-      "execution_count": 29,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1041,7 +1041,7 @@
       "metadata": {
         "id": "JjfwMOtoMU4T"
       },
-      "execution_count": 30,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1056,7 +1056,7 @@
       "metadata": {
         "id": "iqCVZ84ZMzAN"
       },
-      "execution_count": 31,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1091,9 +1091,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DRUoSQ-pOmg8",
-        "outputId": "f390f226-2b97-47dc-969c-50659c20e9a7"
+        "outputId": "a657935f-7e0b-4576-d72a-c113ef26725b"
       },
-      "execution_count": 32,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1101,14 +1101,14 @@
           "text": [
             "Epoch: 0 and loss: 1.125203251838684\n",
             "Epoch: 10 and loss: 1.0097211599349976\n",
-            "Epoch: 20 and loss: 0.8162348866462708\n",
+            "Epoch: 20 and loss: 0.8162347674369812\n",
             "Epoch: 30 and loss: 0.585993230342865\n",
-            "Epoch: 40 and loss: 0.4003390073776245\n",
-            "Epoch: 50 and loss: 0.2679471969604492\n",
-            "Epoch: 60 and loss: 0.1796349734067917\n",
+            "Epoch: 40 and loss: 0.4003389775753021\n",
+            "Epoch: 50 and loss: 0.26794716715812683\n",
+            "Epoch: 60 and loss: 0.1796349585056305\n",
             "Epoch: 70 and loss: 0.12165623158216476\n",
-            "Epoch: 80 and loss: 0.0860651433467865\n",
-            "Epoch: 90 and loss: 0.06522615998983383\n"
+            "Epoch: 80 and loss: 0.0860651507973671\n",
+            "Epoch: 90 and loss: 0.06522614508867264\n"
           ]
         }
       ]
@@ -1127,9 +1127,9 @@
           "height": 466
         },
         "id": "OO5gj2MDOq8f",
-        "outputId": "812154eb-dd85-427c-dbb1-1569dbfe1ee4"
+        "outputId": "f747b84c-7c5d-4c57-8626-0399a290d5b8"
       },
-      "execution_count": 33,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1139,7 +1139,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
@@ -1155,11 +1155,124 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Evaluate Model on Test Data Set (validate model on test set)\n",
+        "with torch.no_grad(): # Basically turn off back propagation\n",
+        "  y_eval = model.forward(X_test) # X_test are features from our test set, y_eval will be predictions\n",
+        "  loss = criterion(y_eval, y_test) # Find the loss or error"
+      ],
       "metadata": {
         "id": "-hRPATpLRxrt"
       },
-      "execution_count": 33,
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-zUdK0_qyPBB",
+        "outputId": "8811cf10-290b-43bb-b8be-88bb8dbfe6be"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.1315)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "correct = 0\n",
+        "with torch.no_grad():\n",
+        "  for i, data in enumerate(X_test):\n",
+        "    y_val = model.forward(data)\n",
+        "\n",
+        "    \"\"\"if y_test[i] == 0.0:\n",
+        "      x = \"Setosa\"\n",
+        "    elif y_test[i] == 1.0:\n",
+        "      x = \"Versicolor\"\n",
+        "    else:\n",
+        "      x = \"Virginica\"\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # Will tell us what type of flower class our network thinks it is\n",
+        "    print(f'{i+1}.) {str(y_val)} \\t{y_test[i]} \\t {y_val.argmax().item()}')\n",
+        "\n",
+        "    # Correct or not\n",
+        "    if y_val.argmax().item() == y_test[i]:\n",
+        "      correct += 1\n",
+        "\n",
+        "print(f'we got {correct} correct!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3qlEssoSyYoQ",
+        "outputId": "2da8fd57-af4d-4cd8-c5b6-446c1c8cf39c"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.) tensor([-5.8771,  4.4629,  6.5155]) \t2 \t 2\n",
+            "2.) tensor([-7.5451,  4.1668,  9.7293]) \t2 \t 2\n",
+            "3.) tensor([-8.4517,  5.1275, 10.2015]) \t2 \t 2\n",
+            "4.) tensor([-4.3411,  5.6280,  2.5636]) \t1 \t 1\n",
+            "5.) tensor([-7.1838,  4.8757,  8.3023]) \t2 \t 2\n",
+            "6.) tensor([-3.3940,  5.3421,  1.2802]) \t1 \t 1\n",
+            "7.) tensor([-5.9240,  4.9826,  6.0025]) \t2 \t 2\n",
+            "8.) tensor([-4.2895,  5.7016,  2.3920]) \t1 \t 1\n",
+            "9.) tensor([-6.5369,  4.9261,  7.1291]) \t2 \t 2\n",
+            "10.) tensor([-8.0526,  4.4129, 10.3325]) \t2 \t 2\n",
+            "11.) tensor([-5.6775,  4.9505,  5.6248]) \t2 \t 2\n",
+            "12.) tensor([ 4.5748, -2.2579, -2.8925]) \t0 \t 0\n",
+            "13.) tensor([ 4.2646, -2.0055, -2.7342]) \t0 \t 0\n",
+            "14.) tensor([-2.1081,  4.0482,  0.5803]) \t1 \t 1\n",
+            "15.) tensor([ 3.4608, -1.2147, -2.3488]) \t0 \t 0\n",
+            "16.) tensor([-5.4739,  5.1174,  5.0966]) \t2 \t 1\n",
+            "17.) tensor([ 4.0637, -1.8045, -2.6504]) \t0 \t 0\n",
+            "18.) tensor([-5.8090,  4.6057,  6.2494]) \t1 \t 2\n",
+            "19.) tensor([ 4.9250, -2.5763, -3.0545]) \t0 \t 0\n",
+            "20.) tensor([ 3.4559, -1.2559, -2.3637]) \t0 \t 0\n",
+            "21.) tensor([-2.6161,  4.5584,  0.8575]) \t1 \t 1\n",
+            "22.) tensor([-7.7427,  4.7379,  9.4233]) \t2 \t 2\n",
+            "23.) tensor([ 3.5776, -1.3269, -2.4109]) \t0 \t 0\n",
+            "24.) tensor([ 4.5445, -2.2478, -2.8698]) \t0 \t 0\n",
+            "25.) tensor([-2.6548,  4.6138,  0.8825]) \t1 \t 1\n",
+            "26.) tensor([-3.2832,  5.2189,  1.2163]) \t1 \t 1\n",
+            "27.) tensor([-4.6527,  5.7790,  2.9302]) \t1 \t 1\n",
+            "28.) tensor([-2.9436,  4.8858,  1.0381]) \t1 \t 1\n",
+            "29.) tensor([ 4.5932, -2.2788, -2.8989]) \t0 \t 0\n",
+            "30.) tensor([-4.5797,  5.4566,  3.1690]) \t1 \t 1\n",
+            "we got 28 correct!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Yrw-7l4KzU55"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
