Evaluate New Data On the Network and Save and Load our NN Model

--- a/simple_NeuralNetwork.ipynb
+++ b/simple_NeuralNetwork.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNKGL0ung22VORdfpWf3Y2k",
+      "authorship_tag": "ABX9TyPTaNpyHvj3ySss5yFDNc02",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1268,9 +1268,115 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "new_iris = torch.tensor([4.7,3.2,1.3,0.2])"
+      ],
       "metadata": {
         "id": "Yrw-7l4KzU55"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "  print(model(new_iris))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zz6xJxDn2Ero",
+        "outputId": "215a4eb0-79e2-40df-fe26-650e35b0b1d4"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 4.5445, -2.2478, -2.8698])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save our NN Model\n",
+        "torch.save(model.state_dict(), 'my_really_awesome_iris_model.pt')"
+      ],
+      "metadata": {
+        "id": "NL3NAZk-2j-1"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the Saved Model\n",
+        "new_model = Model()\n",
+        "new_model.load_state_dict(torch.load('my_really_awesome_iris_model.pt'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pWrWHJEz3P4a",
+        "outputId": "6abc1d44-e50c-4fd0-ba96-a65f81b1eec1"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make sure it loaded correctly\n",
+        "new_model.eval()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lrOwj-Zo3f2a",
+        "outputId": "d9431033-5fc4-4472-b311-cf0adf79a4e5"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Model(\n",
+              "  (fc1): Linear(in_features=4, out_features=8, bias=True)\n",
+              "  (fc2): Linear(in_features=8, out_features=9, bias=True)\n",
+              "  (out): Linear(in_features=9, out_features=3, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uBrWVsBP3qGn"
       },
       "execution_count": null,
       "outputs": []
