Created Convolutional and Pooling Layers

--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNFDRcMcKBwKVcfHyMk+aJL",
+      "authorship_tag": "ABX9TyNLbmYNd0vz0gyCVoLsgf+r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9_92qu91bVn-",
-        "outputId": "2d05cf43-f4f3-4b05-ac32-be92505acc76"
+        "outputId": "d39e1563-d60b-4bce-d983-11549f8df8bd"
       },
       "execution_count": 5,
       "outputs": [
@@ -127,7 +127,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hz7RrehSbY1i",
-        "outputId": "5560605c-9b3a-46c4-cbcd-336a72ce3b7e"
+        "outputId": "fb0a1149-d4d4-4f34-b3e9-b10048e61cd7"
       },
       "execution_count": 6,
       "outputs": [
@@ -260,11 +260,241 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Create a small batch size for image...let's say 10\n",
+        "train_loader = DataLoader(train_data, batch_size=10, shuffle=True)\n",
+        "test_loader = DataLoader(test_data, batch_size=10, shuffle=False)"
+      ],
       "metadata": {
         "id": "hdH7IrGHcFb9"
       },
-      "execution_count": 16,
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define Our CNN Model\n",
+        "# Describe convolutional layer and ehat it's doing (2 convolutional layers)\n",
+        "conv1 = nn.Conv2d(in_channels=1, out_channels=6, kernel_size=3, stride=1)\n",
+        "conv2 = nn.Conv2d(in_channels=6, out_channels=16, kernel_size=3, stride=1)"
+      ],
+      "metadata": {
+        "id": "_X8csIPrdSz7"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Grab 1 MNIST record/image\n",
+        "for i, (X_train, y_train) in enumerate(train_data):\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "QGeJ6ik9d_cc"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qnnnRkhqeLuE",
+        "outputId": "59cdfd93-a3b6-4035-c049-8c98b294ba4b"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = X_train.view(1, 1, 28, 28)"
+      ],
+      "metadata": {
+        "id": "E1c9vlzRePFZ"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Perform our first convolution\n",
+        "x = F.relu(conv1(x)) # Rectified Linear Unit for our activation function"
+      ],
+      "metadata": {
+        "id": "SijM7oh7edUw"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 single image, 6 is the filters we asked for, 26x26\n",
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lonf6vQ1e0fy",
+        "outputId": "2e63100c-be3a-41c9-b7b6-db827f54775a"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 6, 26, 26])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pass through the pooling layer\n",
+        "x = F.max_pool2d(x, 2, 2) # kernal of 2 and stride of 2"
+      ],
+      "metadata": {
+        "id": "mCj-RCZ3e4P8"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x6Jei1_Qf6IF",
+        "outputId": "12ac0f54-24af-4fd8-8af1-6162ee7e15a3"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 6, 13, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Do our second convolutional layer\n",
+        "x = F.relu(conv2(x))"
+      ],
+      "metadata": {
+        "id": "CXZXoMQvf9WG"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kihCfAeEgT1p",
+        "outputId": "3dbae18b-53af-4bb2-d957-ceac7ccab713"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 16, 11, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pooling layer\n",
+        "x = F.max_pool2d(x, 2, 2)"
+      ],
+      "metadata": {
+        "id": "QSfGl_NfgVNu"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I2URfJvHgiou",
+        "outputId": "041e980d-8139-4dd8-a43a-8d2c1a8bbb42"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 16, 5, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ef6bAMRZglEu"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
